# remote-dev-bot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config.yaml  debug.md  demo.md  design-workspace.md  goodbye.py  hello.py  how-it-works.md  install.md  onboarding.md  pyproject.toml  remote-dev-bot.local.yaml  remote-dev-bot.yaml  remote-dev-bot.yaml.template  runbook.md
.gemini/: GEMINI.md
.github/workflows/: agent.yml  dogfood.yml  e2e-security.yml  e2e.yml  full-test-suite.yml  release.yml  remote-dev-bot.yml  resolve.yml  test.yml
.openhands/microagents/: repo.md
comprehensive-review/: README.md
comprehensive-review/2026-06-11/: AGENT-PROMPTS.md  PROCESS.md  SUMMARY.md  findings-code.md  findings-docs.md  (+3 more)
examples/: agent.yml  example-issue.md  example-pr.md
lib/: config.py  context.py  cost.py  cumulative_cost.py  design_loop.py  distill.py  feedback.py  formatting.py  generate_index.py  post_fallback_cost.py  reconcile.py  resolve.py  tools.py  workshop.py
scripts/: compile.py
tests/: e2e-security.sh  e2e.sh  test_cache_distill_savings.py  test_command_extraction.sh  test_compaction.py  test_compile.py  test_config.py  test_context.py  test_cost.py  test_cumulative_cost.py  test_design_loop.py  test_distill.py  test_feedback.py  test_goodbye.py  test_hello.py  test_no_op.py  test_production_imports.py  test_reconcile.py  test_resolve_recovery.py  test_resolve_scope_prompt.py  test_spec_generation_prompts.py  test_syntax.py  test_tools.py  test_workshop.py  test_yaml.py
(+1 files in other folders)
